@@ -1,5 +1,4 @@
-DIST netbeans-cnd-6.0_pre20070825092557.tar.bz2 1920918 RMD160 7ac35ecb6a2abedb3c05a91d6e6ce0067c0cecc0 SHA1 9d75345fb8527df8ab13e19d61f4a7826e91671a SHA256 2ba4ceb73cf567fa3faec12cdbf66d2e4c6a65701858b6f5d7a8333647c4879b
-DIST netbeans-nbbuild-6.0_pre20070825092557.tar.bz2 534376 RMD160 4c453d277a3124b9bab3151867999bb7dbf015a1 SHA1 6874011a0fa0036eddbdaeb7b0a117cd01c60e38 SHA256 4b494ad31ebeb262d07dfc341851355c19fcdaf6a30c1256e07897eae5424c97
-EBUILD antlr-netbeans-cnd-2.7.7_p20070825092557.ebuild 1037 RMD160 e6146ca7ca20f8258ac76e0044225f1f7f514bef SHA1 17abc9f8ad40e6c60ee417b804e7598ccdc601f9 SHA256 5ea2720e812bfbfbff169cc7083cfccfa79c7fc776996e2438b6edce34f7a488
-EBUILD antlr-netbeans-cnd-2.7.7_p20070828082648.ebuild 1037 RMD160 e6146ca7ca20f8258ac76e0044225f1f7f514bef SHA1 17abc9f8ad40e6c60ee417b804e7598ccdc601f9 SHA256 5ea2720e812bfbfbff169cc7083cfccfa79c7fc776996e2438b6edce34f7a488
-MISC ChangeLog 865 RMD160 84d33582497312fc723e663d782a0e0850c10b7d SHA1 b6d40465c3bce054c4c92cecc53b0a089fb7d615 SHA256 546b3a1cc7734375f8b6b4810a3169c7013214b178f7f16e7fd43d44ba1812c3
+DIST netbeans-cnd-6.0_beta1_p20070920070410.tar.bz2 2132871 RMD160 68502817f25f4b46b7ed522c4e03d73683ebb6d8 SHA1 45f2d319dc33632c878fba9d31e75c31d687189d SHA256 697ea629b54e024a8b3238448fe1af4cae0c017d7bee2e03ad82a51e171cc3da
+DIST netbeans-nbbuild-6.0_beta1_p20070920070410.tar.bz2 400878 RMD160 aab5f237161b232c892faf17b0e0072ea3d00817 SHA1 74f5f329bd96cedc7aad5ce3edab0e417a4647ac SHA256 00b03f648b825395ecda551d7ca883e12eb67b7a7a514d0d902e4749f7cc837d
+EBUILD antlr-netbeans-cnd-2.7.7_p20070920070410.ebuild 1041 RMD160 b6415dfa936aeba97066905ca0b475049c4ee900 SHA1 95e10d67d7f46c2faec4e05ae1a27cd2151b487b SHA256 761bd39b7d768b8aaab6c47842e0772197d7fd18e2bc11b6de254905cb4e9104
+MISC ChangeLog 1089 RMD160 0c2da2fe1e0b59aa4e3f06bd4a80e97834abae0a SHA1 c284a2605fe6cf1821cdf92bbae6679af1475158 SHA256 9f1524ff0d06780f9b47292a3ec79efaca13f4757518138b1545af7beec99ee1
